--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "lint-ci": "eslint src --max-warnings=0",
     "build": "tsc"
   },
+  "dependencies": {
+    "@jvalue/node-dry-basics": "0.0.3",
+    "pg": "8.x",
+    "@types/pg": "7.x"
+  },
   "devDependencies": {
     "@types/node": "^14.14.7",
-    "@types/pg": "^7.14.7",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "eslint": "^7.11.0",
@@ -40,8 +44,5 @@
   "bugs": {
     "url": "https://github.com/jvalue/node-dry/issues"
   },
-  "homepage": "https://github.com/jvalue/node-dry#readme",
-  "dependencies": {
-    "@jvalue/node-dry-basics": "0.0.3"
-  }
+  "homepage": "https://github.com/jvalue/node-dry#readme"
 }
