--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jvalue/node-dry-pg",
-  "version": "0.0.3",
+  "version": "1.0.0-alpha1",
   "description": "Reusable nodejs pg util library ",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
