--- a/.github/workflows/pg-build.yml
+++ b/.github/workflows/pg-build.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: npm install
+      - run: npm ci
       - run: npm run lint-ci
+      - run: npm run test
       - run: npm run build
