--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "/dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint src --fix",
-    "lint-ci": "eslint src --max-warnings=0",
+    "test": "jest --colors --verbose --detectOpenHandles",
+    "lint": "eslint src test --fix",
+    "lint-ci": "eslint src test --max-warnings=0",
     "build": "tsc"
   },
   "dependencies": {
@@ -19,17 +19,19 @@
     "@types/pg": "7.x"
   },
   "devDependencies": {
-    "@types/node": "^14.14.7",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
-    "eslint": "^7.11.0",
+    "@types/node": "^14.14.13",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "eslint": "^7.15.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-config-standard-with-typescript": "19.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "typescript": "^4.0.5"
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.1",
+    "typescript": "^4.1.3"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
