--- a/.github/workflows/pg-build.yml
+++ b/.github/workflows/pg-build.yml
@@ -4,10 +4,23 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
+    name: Test and Build on Node ${{ matrix.node }}
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [12, 14, 16]
     steps:
-      - uses: actions/checkout@v2
-      - run: npm ci
-      - run: npm run lint-ci
-      - run: npm run test
-      - run: npm run build
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Node ${{ matrix.node }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node }}
+      - name: Install dependencies
+        run: npm ci
+      - name: Lint files
+        run: npm run lint-ci
+      - name: Test
+        run: npm run test
+      - name: Build
+        run: npm run build
