--- a/package.json
+++ b/package.json
@@ -15,23 +15,24 @@
   },
   "dependencies": {
     "@jvalue/node-dry-basics": "0.0.3",
-    "pg": "8.x",
-    "@types/pg": "7.x"
+    "@types/pg": "^8.6.0",
+    "pg": "^8.6.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "eslint": "^7.17.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-config-standard-with-typescript": "19.0.1",
-    "eslint-plugin-import": "^2.22.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "eslint": "^7.29.0",
+    "eslint-config-standard-with-typescript": "20.0.0",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.4.1",
-    "typescript": "^4.1.3"
+    "eslint-plugin-promise": "^4.3.1",
+    "jest": "^27.0.5",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.4"
+  },
+  "engines": {
+    "node": ">=12"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
